--- a/data/countries/de/mv/data.yaml
+++ b/data/countries/de/mv/data.yaml
@@ -16,8 +16,8 @@ urls:
     url: https://twitter.com/GRUENE_MV
   - type: INSTAGRAM
     url: https://www.instagram.com/gruenemv/
-  - type: WIKIPEDIA
-    url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Mecklenburg-Vorpommern
+  - type: WIKIDATA
+    url: https://www.wikidata.org/wiki/Q1020846
 emails:
   - address: post@gruene-mv.de
 ---
