--- a/data/countries/de/nw/data.yaml
+++ b/data/countries/de/nw/data.yaml
@@ -16,8 +16,8 @@ urls:
     url: https://twitter.com/gruenenrw
   - type: INSTAGRAM
     url: https://www.instagram.com/gruenenrw/
-  - type: WIKIPEDIA
-    url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Nordrhein-Westfalen
+  - type: WIKIDATA
+    url: https://www.wikidata.org/wiki/Q1020850
 emails:
   - address: info@gruene-nrw.de
 ---
