--- a/data/countries/de/bb/data.yaml
+++ b/data/countries/de/bb/data.yaml
@@ -17,8 +17,8 @@ urls:
     url: https://twitter.com/gruenebbg
   - type: INSTAGRAM
     url: https://www.instagram.com/gruenebbg/
-  - type: WIKIPEDIA
-    url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Brandenburg
+  - type: WIKIDATA
+    url: https://www.wikidata.org/wiki/Q1020841
 emails:
   - address: info@gruene-brandenburg.de
 ---
