--- a/data/countries/de/rp/data.yaml
+++ b/data/countries/de/rp/data.yaml
@@ -18,8 +18,8 @@ urls:
     url: https://www.instagram.com/gruene_rlp/
   - type: YOUTUBE
     url: https://www.youtube.com/user/gruenerlp/
-  - type: WIKIPEDIA
-    url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Rheinland-Pfalz
+  - type: WIKIDATA
+    url: https://www.wikidata.org/wiki/Q1020849
 emails:
   - address: lgs@gruene-rlp.de
 ---
