--- a/data/countries/de/sh/data.yaml
+++ b/data/countries/de/sh/data.yaml
@@ -20,8 +20,8 @@ urls:
     url: https://instagram.com/gruenesh
   - type: FLICKR
     url: https://www.flickr.com/photos/gruene_sh/
-  - type: WIKIPEDIA
-    url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Schleswig-Holstein
+  - type: WIKIDATA
+    url: https://www.wikidata.org/wiki/Q1020855
 emails:
   - address: info@sh-gruene.de
 ---
