--- a/data/countries/de/sl/data.yaml
+++ b/data/countries/de/sl/data.yaml
@@ -16,8 +16,8 @@ urls:
     url: https://twitter.com/Gruene_Saar
   - type: INSTAGRAM
     url: https://www.instagram.com/gruene_saar/
-  - type: WIKIPEDIA
-    url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Saarland
+  - type: WIKIDATA
+    url: https://www.wikidata.org/wiki/Q1020854
 emails:
   - address: lgs@gruene-saar.de
 ---
