--- a/data/countries/de/th/data.yaml
+++ b/data/countries/de/th/data.yaml
@@ -14,8 +14,8 @@ urls:
     url: https://www.facebook.com/gruenethueringen
   - type: TWITTER
     url: https://twitter.com/Gruene_TH
-  - type: WIKIPEDIA
-    url: https://de.wikipedia.org/wiki/B%C3%BCndnis_90/Die_Gr%C3%BCnen_Th%C3%BCringen
+  - type: WIKIDATA
+    url: https://www.wikidata.org/wiki/Q1020858
 emails:
   - address: info@gruene-thueringen.de
 ---
