add a lot of social links

--- a/data/countries/de/bw/bodenseekreis/data.yaml
+++ b/data/countries/de/bw/bodenseekreis/data.yaml
@@ -9,6 +9,8 @@ type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
     url: https://www.gruene-bodenseekreis.de/
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruenebodenseekreis/
 ---
 city: Friedrichshafen
 country: DE
