--- a/data/countries/de/bw/boeblingen/data.yaml
+++ b/data/countries/de/bw/boeblingen/data.yaml
@@ -12,6 +12,8 @@ urls:
     url: https://www.gruene-boeblingen.de/
   - type: FACEBOOK
     url: https://www.facebook.com/GrueneBB
+  - type: INSTAGRAM
+    url: https://www.instagram.com/grueneboeblingen/
 ---
 city: Aidlingen
 country: DE
