--- a/data/countries/de/bw/calw/data.yaml
+++ b/data/countries/de/bw/calw/data.yaml
@@ -12,6 +12,10 @@ urls:
     url: https://www.gruene-kreis-calw.de/
   - type: FACEBOOK
     url: https://www.facebook.com/gruenecalw/
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruenekreiscalw/
+  - type: TWITTER
+    url: https://twitter.com/GrueneCalw
 ---
 city: Althengstett/Gechingen/Ostelsheim/Simmozheim
 country: DE
