--- a/data/countries/de/bw/waldshut/data.yaml
+++ b/data/countries/de/bw/waldshut/data.yaml
@@ -11,3 +11,5 @@ urls:
     url: https://www.gruene-wt.de/
   - type: TWITTER
     url: https://twitter.com/kvgruene_wt
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruene.wt
