Update some website URLs in BW (#163)

--- a/data/countries/de/bw/data.yaml
+++ b/data/countries/de/bw/data.yaml
@@ -195,7 +195,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-nok.de/
+    url: https://www.gruene-nok.de/
   - type: FACEBOOK
     url: https://www.facebook.com/GrueneNOK
   - type: TWITTER
@@ -210,7 +210,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-ravensburg.de/
+    url: https://www.gruene-ravensburg.de/
   - type: FACEBOOK
     url: https://www.facebook.com/GrueneRavensburg
 ---
@@ -234,7 +234,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-schwaebisch-gmuend.de/
+    url: https://www.gruene-schwaebisch-gmuend.de/
   - type: FACEBOOK
     url: https://www.facebook.com/diegrunen.schwabischgmund
 ---
@@ -247,7 +247,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-sha.de/
+    url: https://gruene-sha.de/
 ---
 country: DE
 district: Schwarzwald-Baar
@@ -271,7 +271,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://gruene-sigmaringen.de/
+    url: https://gruene-sigmaringen.de/
   - type: FACEBOOK
     url: https://www.facebook.com/GruenerKreisverbandSigmaringen/
 ---
@@ -301,7 +301,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-tuttlingen.de/
+    url: https://www.gruene-tuttlingen.de/
   - type: FACEBOOK
     url: https://www.facebook.com/gruenetuttlingen
 ---
@@ -314,7 +314,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-ulm.de/
+    url: https://gruene-ulm.de/
   - type: FACEBOOK
     url: https://www.facebook.com/grueneulm
 ---
@@ -327,6 +327,6 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-zollernalb.de
+    url: https://www.gruene-zollernalb.de
   - type: FACEBOOK
     url: https://www.facebook.com/gruenezak
