--- a/data/countries/de/nw/koeln/data.yaml
+++ b/data/countries/de/nw/koeln/data.yaml
@@ -13,93 +13,115 @@ urls:
     url: https://www.facebook.com/gruenekoeln
   - type: TWITTER
     url: https://twitter.com/gruenekoeln
+  - type: YOUTUBE
+    url: https://www.youtube.com/channel/UCbPsNqbtStXltU9QgBhAQig
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruenekoeln/
 ---
 city: Köln-Innenstadt/Deutz
 country: DE
 district: Köln
+emails:
+  - address: innenstadt@gruenekoeln.de
 level: DE:ORTSVERBAND
 state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruenekoeln.de/bezirke/bezirk1/aktuelles.html
+    url: https://www.gruenekoeln.de/veedel/innenstadtdeutz/
 ---
 city: Köln-Ehrenfeld
 country: DE
 district: Köln
+emails:
+  - address: vorstand@gruene-ehrenfeld.de
 level: DE:ORTSVERBAND
 state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruenekoeln.de/bezirke/bezirk4/aktuelles.html
+    url: https://www.gruenekoeln.de/veedel/ehrenfeld/
 ---
 city: Köln-Mülheim
 country: DE
 district: Köln
+emails:
+  - address: ov9@gruenekoeln.de
 level: DE:ORTSVERBAND
 state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruenekoeln.de/bezirke/bezirk9/aktuelles-und-termine.html
+    url: https://www.gruenekoeln.de/veedel/muelheim/
 ---
 city: Köln-Nippes
 country: DE
 district: Köln
+emails:
+  - address: nippes@gruenekoeln.de
 level: DE:ORTSVERBAND
 state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruenekoeln.de/bezirke/bezirk5/aktuelles.html
+    url: https://www.gruenekoeln.de/veedel/nippes/
 ---
 city: Köln-Chorweiler
 country: DE
 district: Köln
+emails:
+  - address: ov6@gruenekoeln.de
 level: DE:ORTSVERBAND
 state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruenekoeln.de/bezirke/bezirk6/aktuelles.html
+    url: https://www.gruenekoeln.de/veedel/chorweiler/
 ---
 city: Köln-Porz/Poll
 country: DE
 district: Köln
+emails:
+  - address: ov7@gruenekoeln.de
 level: DE:ORTSVERBAND
 state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruenekoeln.de/bezirke/bezirk7.html
+    url: https://www.gruenekoeln.de/veedel/porzpoll/
 ---
 city: Köln-Rodenkirchen
 country: DE
 district: Köln
+emails:
+  - address: rodenkirchen@gruenekoeln.de
 level: DE:ORTSVERBAND
 state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruenekoeln.de/bezirke/bezirk2/aktuelles.html
+    url: https://www.gruenekoeln.de/veedel/rodenkirchen/
 ---
 city: "Köln-Lindenthal"
 country: DE
 district: Köln
+emails:
+  - address: ov3@gruenekoeln.de
 level: DE:ORTSVERBAND
 state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruenekoeln.de/bezirke/bezirk3/aktuelles.html
+    url: https://www.gruenekoeln.de/veedel/lindenthal/
 ---
 city: Köln-Kalk
 country: DE
 district: Köln
+emails:
+  - address: ov8@gruenekoeln.de
 level: DE:ORTSVERBAND
 state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruenekoeln.de/bezirke/bezirk8/willkommen.html
+    url: https://www.gruenekoeln.de/veedel/kalk/
