--- a/data/countries/de/be/data.yaml
+++ b/data/countries/de/be/data.yaml
@@ -55,6 +55,8 @@ urls:
     url: https://twitter.com/Gruene_CW
   - type: FACEBOOK
     url: https://www.facebook.com/gruene.cw
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruene_cw/
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -64,6 +66,12 @@ district: Friedrichshain-Kreuzberg
 urls:
   - type: WEBSITE
     url: https://gruene-xhain.de/
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruenexhain/
+  - type: FACEBOOK
+    url: https://www.facebook.com/GrueneXhain
+  - type: TWITTER
+    url: https://twitter.com/GrueneXhain
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -77,6 +85,8 @@ urls:
     url: https://twitter.com/gruene_lbg
   - type: FACEBOOK
     url: https://www.facebook.com/gruenelichtenberg
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruene_lbg
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -103,6 +113,8 @@ urls:
     url: https://twitter.com/gruenemitte
   - type: FACEBOOK
     url: https://www.facebook.com/gruene.mitte
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruene_berlinmitte/
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -112,6 +124,12 @@ district: Neukölln
 urls:
   - type: WEBSITE
     url: http://www.gruene-neukoelln.de/
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruene_neukoelln/
+  - type: FACEBOOK
+    url: https://www.facebook.com/grueneneukoelln/
+  - type: TWITTER
+    url: https://twitter.com/grueneneukoelln
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -121,6 +139,12 @@ district: Pankow
 urls:
   - type: WEBSITE
     url: http://gruene-pankow.de/home/
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruenepankow/
+  - type: TWITTER
+    url: https://twitter.com/GruenePankow
+  - type: FACEBOOK
+    url: https://www.facebook.com/GruenePankow/
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -134,6 +158,8 @@ urls:
     url: https://twitter.com/fuchsgruen
   - type: FACEBOOK
     url: https://www.facebook.com/gruene.reinickendorf
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruener.fuchs/
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -147,6 +173,8 @@ urls:
     url: https://twitter.com/GrueneSpandau
   - type: FACEBOOK
     url: https://www.facebook.com/GrueneSpandau/
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruenespandau/
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -169,6 +197,8 @@ urls:
     url: https://twitter.com/GrueneTS
   - type: FACEBOOK
     url: https://www.facebook.com/GrueneTempelhofSchoeneberg
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruenetempelhof/
 ---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
@@ -178,3 +208,7 @@ district: Treptow-Köpenick
 urls:
   - type: WEBSITE
     url: http://www.gruene-treptow-koepenick.de/
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruene_tk/
+  - type: FACEBOOK
+    url: https://www.facebook.com/GrueneTreptowKoepenick/
